--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "ngx-toastr": "^11.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "xng-breadcrumb": "^5.0.1",
     "zone.js": "~0.11.4"
   },
