--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,7 @@
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
-    "strictDomEventTypes": false
+    "strictTemplates": false,
+    "strictDomEventType": false
   }
 }
